[package]
name = "hellowin"
version = "0.1.0"
authors = ["Nils Martel <nils.martel@graphmasters.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gotham = "0.4.0"                           # A flexible web framework that promotes stability, safety, security and speed.
druid = "0.4.0"              # Data-oriented Rust UI design toolkit.
structopt = "0.3.7"                # Parse command line argument by defining a struct.
